# StoreLite-IMS

./: .env  .env.example  .gitignore  AGENT_SYSTEM_PROMPT.md  AGENT_TOOL_FIX_SUMMARY.md  API_TESTING_GUIDE.md  API_TROUBLESHOOTING.md  CASE_INSENSITIVE_SEARCH_ENHANCEMENT.md  CATEGORY_CONSTRAINT_FIX.md  CHANGELOG.md  CHATKIT_COMPLETE_FIX.md  CHATKIT_FIXED.md  CHATKIT_FIX_SUMMARY.md  CHATKIT_INSTALL_AND_TEST.md  CHATKIT_PURE_VANILLA_FIX.md  CHATKIT_READY.md  CHATKIT_TEST_GUIDE.md  CHATKIT_UI_ENHANCEMENT.md  CLAUDE.md  COMPLETE_AGENT_IMPROVEMENTS.md  ENDPOINT_FIX_SUMMARY.md  GETTING_STARTED_PHASE3.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE_PHASE6.md  IMPLEMENTATION_SUMMARY.md  IMS-Simple-Inventory-Billing-System.md  ITEM_SELECTION_IMPROVEMENTS.md  PHASE2_CHATKIT_IMPLEMENTATION.md  PHASE3_COMPLETION_SUMMARY.md  PHASE5_COMPLETION_SUMMARY.md  PHASE6_IMPLEMENTATION_STATUS.md  PHASE_4_IMPLEMENTATION_SUMMARY.md  PHASE_4_PLAN_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_COMPLETION_SUMMARY.md  POS_FIX_SUMMARY.md  POS_FLOW_EXPLAINED.md  QUANTITY_VALIDATION.md  QUICK_START.md  QUICK_TEST_REFERENCE.md  (+6 more)
backend/: .env  .env.example  CLAUDE.md  COVERAGE_REPORT.md  MCP_API_DOCUMENTATION.md  PHASE5_IMPLEMENTATION_GUIDE.md  PHASE_4_FINAL_VALIDATION.md  README.md  ims_dev.db  main.py  migrate_add_user_id.py  pyproject.toml  run_dev.bat  run_dev.sh  schema.sql  test_agent_endpoint.py  test_agent_tools.py  test_api.py  test_api.sh  test_fixes.py  test_real_db.py  test_results.txt
backend/app/: __init__.py  database.py  exceptions.py  main.py  models.py  schemas.py
backend/app/agents/: __init__.py  agent.py  confirmation_flow.py  schema_query_agent.py  session_manager.py  tools_client.py
backend/app/connector_agents/: __init__.py  base.py  gdrive_agent.py  gmail_agent.py  notion_agent.py  registry.py
backend/app/connectors/: __init__.py  agent_tools.py  encryption.py  mcp_client.py  validator.py
backend/app/mcp_server/: __init__.py  document_server.py  exceptions.py  main.py  schemas.py  server.py  tools_analytics.py  tools_billing.py  tools_file_analysis.py  tools_file_search.py  tools_gmail.py  tools_google_search.py  tools_inventory.py  tools_schema_query.py  utils.py
backend/app/routers/: agent.py  analytics.py  auth.py  billing.py  chatkit_server.py  connectors.py  db_connect.py  files.py  gdrive_oauth.py  gemini_file_search.py  gmail.py  gmail_oauth.py  inventory.py  inventory_agent.py  notion_mcp_oauth.py  oauth_connectors.py  schema_agent.py  tools.py  user_settings.py
backend/app/services/: __init__.py  agent_session_service.py  auth_service.py  chatkit_store_service.py  encryption_service.py  file_processor.py  gemini_file_search_service.py  gmail_oauth_service.py  gmail_service.py  google_search.py  query_validator.py  rate_limiter.py  schema_discovery.py  session_service.py
backend/app/tools/: __init__.py  registry.py
backend/migrations/: 010_add_gmail_oauth_columns.sql  011_add_email_to_mcp_connections.sql  011_add_gdrive_oauth_columns.sql  011_add_user_mcp_connectors.sql  add_schema_agent_columns.sql  run_migration.py
backend/src/: __init__.py  db.py
backend/src/cli/: __init__.py  add_item.py  billing_menu.py  error_handler.py  list_items.py  main_menu.py  search_items.py  ui_utils.py  ui_utils_patch.py  update_item.py
backend/src/models/: __init__.py  base.py  bill.py  item.py  schemas.py
backend/tests/: __init__.py  conftest.py  test_case_insensitive_categories.py
(+313 files in other folders)
