[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ims-api"
version = "0.2.0"
description = "Intelligent Inventory and Billing Management System with Case-Insensitive Search"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Development Team"}
]

dependencies = [
    # FastAPI & HTTP
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.24.0",

    # Database (PostgreSQL async)
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",           # Async PostgreSQL driver
    "psycopg2-binary>=2.9.0",    # Fallback sync driver
    "alembic>=1.13.0",            # Database migrations
    "aiosqlite>=0.19.0",          # SQLite async support

    # Configuration & Utils
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # OpenAI & LiteLLM (Latest December 2025)
    "openai>=1.3.0",
    "openai-agents>=0.6.2",       # Latest Agents SDK
    "litellm>=1.76.1",            # LiteLLM with Gemini support

    # MCP (Model Context Protocol)
    "fastmcp>=1.0",               # FastMCP server framework

    # Logging & Monitoring
    "python-json-logger>=2.0.7",

    # Type hints
    "typing-extensions>=4.0.0",

    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: mark test as a unit test",
    "integration: mark test as an integration test",
    "contract: mark test as a contract test",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
